--- a/webapps/webapps.csproj
+++ b/webapps/webapps.csproj
@@ -4,12 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
-    <StartupObject>webapps.Program</StartupObject>
+    <StartupObject></StartupObject>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core.app\Core.app.csproj" />
