--- a/Core.app/Core.app.csproj
+++ b/Core.app/Core.app.csproj
@@ -7,4 +7,8 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+  </ItemGroup>
+
 </Project>
